# agentic-mcp-gateway-demo

./: .gitignore  AGENT.md  AGENTS.md  README.md  SECURITY.md  agentgateway.yaml
keycloak/: pear-realm.json
pear-genius/: .env.example  .gitignore  README.md  pyproject.toml
pear-genius/pear_genius/: __init__.py  __main__.py  config.py  main.py  server.py
pear-genius/pear_genius/agents/: __init__.py  agent.py  base.py  order.py  supervisor.py
pear-genius/pear_genius/auth/: __init__.py  keycloak.py
pear-genius/pear_genius/state/: __init__.py  conversation.py
pear-genius/pear_genius/tools/: __init__.py  mcp_client.py  registry.py
pear-genius/tests/: __init__.py  conftest.py  test_agents.py  test_mcp_client.py  test_order_agent.py  test_state.py
pear-services/: package-lock.json  package.json
pear-services/analytics/server/: package-lock.json  package.json
pear-services/customer-accounts/server/: config.js  package-lock.json  package.json
pear-services/customer-support/server/: package-lock.json  package.json
pear-services/inventory/server/: package-lock.json  package.json
pear-services/online-store/server/: config.js  package-lock.json  package.json
pear-services/order-management/server/: config.js  package-lock.json  package.json
pear-services/payments/server/: package-lock.json  package.json
pear-services/physical-stores/server/: config.js  package-lock.json  package.json
pear-services/product-catalog/server/: package-lock.json  package.json
pear-services/product-support/data/: support-content.json
pear-services/product-support/server/: expressServer.js  package-lock.json  package.json
pear-services/shipping/server/: config.js  package-lock.json  package.json
pear-store/: openapi-ts.config.ts  package-lock.json  package.json
pear-store/scripts/: generate-api.mjs
pear-store/src/app/: globals.css  layout.tsx  page.tsx
pear-store/src/lib/: product-images.ts  utils.ts
pear-store/src/stores/: cart-store.ts  chat-store.ts
services/: package-lock.json
services/analytics/server/: config.js  package.json
services/customer-accounts/server/: package.json
services/customer-support/server/: config.js  package-lock.json  package.json
services/inventory/data/: inventory.json
services/order-management/data/: orders.json
(+232 files in other folders)
