[project]
name = "pear-genius"
version = "0.1.0"
description = "Intelligent Customer Support Agent for Pear Computer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.8",
    "langgraph>=1.0.7",
    "langchain-anthropic>1.2.8",
    "langchain-core>=1.2.8",
    "langchain-mcp-adapters>=0.2.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pear-genius = "pear_genius.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pear_genius"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
